firmware-nonfree (0.18) UNRELEASED; urgency=low

  [ maximilian attems ]
  * Add iwlwifi-5000-2.ucode. (closes: #532207)
  * Add iwlwifi-5150-2.ucode.
  * Update iwlwifi-4945 to 228.61.2.24.
  
  [ Ben Hutchings ]
  * Fix Matrox G200/G400/G550 firmware image format (closes: #531367)

 -- maximilian attems <maks@debian.org>  Wed, 01 Jul 2009 11:11:48 +0200

firmware-nonfree (0.17) unstable; urgency=low

  [ maximilian attems ]
  * templates/control.source.in: section non-free/kernel.
  * Update iwlwifi-3945 to 15.32.2.9. (closes: #526114)
  * linux/defines: Fix upstream url.

  [ Ben Hutchings ]
  * Add Radeon RS600, R600-family and R700-family firmware (closes: #532040)
  * Add Ralink RT2860/RT2890 and RT2870 firmware.
  * Add firmware for use with ivtv and pvrusb2 drivers (closes: #524230),
    thanks to Ian Campbell <ijc@hellion.org.uk>.
  * Fix grammatical errors in the templates for package descriptions,
    copyright files and EULA prompts
  * Add myself to Uploaders
  * Update linux-support build-dep to 2.6.30-1

  [ dann frazier ]
  * Fix subject-verb agreement problem in firmware-linux description.
    (Closes: #524382)
  * Update firmware-linux description to clarify the reasoning for the
    bundled nature
  * Add new firmware-bnx2x package (closes: #509646)
  * Add bnx2 firmware from Linux 2.6.30-rc7

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 16 Jun 2009 04:03:38 +0100

firmware-nonfree (0.16) unstable; urgency=low

  * Update Intel Pro 2200/2915 firwmare, version 3.1. (closes: #521531)
  * Update qlogic firmwares: ql2300_fw.bin-3.03.27, ql2322_fw.bin-3.03.27,
    ql2400_fw.bin-4.04.05, ql2500_fw.bin-4.04.05. (closes: #509693)

 -- maximilian attems <maks@debian.org>  Wed, 01 Apr 2009 16:38:02 +0200

firmware-nonfree (0.15) unstable; urgency=low

  [ Ben Hutchings ]
  * Add 3Com Typhoon (3CR990) firmware.
  * Add ATI Rage 128 and Radeon firmware.
  * Add BayCom DAB-USB firmware.
  * Add Intel PRO/100 firmware.